--- a/figma.css
+++ b/figma.css
@@ -1,18 +1,11 @@
 body{
 background-color: #FFFFFF;
-width: Fixed (1,440px)px;
-height: Hug (6,629px)px;
-min-height: 900px;
-top: -2684px;
-left: 309px;
 padding: 0px 48px 0px 48px;
 gap: 0px;
 opacity: 0px;
 }
 
 header{
-width: Fill (1,344px)px;
-height: Hug (80px)px;
 padding: 16px 0px 16px 0px;
 gap: 0px;
 border: 0px 0px 1px 0px;
@@ -43,12 +36,13 @@ line-height: 32px;
 letter-spacing: -0.01em;
 text-align: left;
 text-underline-position: from-font;
-text-decoration-skip-ink: none;
+text-decoration: none;
+padding: 10px;
 color: black;
 }
 
 
-.divider{
+hr{
 width: 1504px;
 height: 0px;
 gap: 0px;
@@ -177,8 +171,6 @@ border-top: 1px solid #000000
     display: flex;
     align-items: center;
     justify-content: center;
-    width: Fill (1,344px)px;
-    height: Hug (1,746px)px;
     padding: 200px 0px 96px 0px;
     gap: 96px;
     border: 0px 0px 1px 0px;
@@ -220,78 +212,20 @@ border-top: 1px solid #000000
     opacity: 0px;
     border-top: 1px solid #000000
 }
-/* .ex_main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 1344px;
-    height: 720px;
-    gap: 48px;
-    opacity: 0px;
-
-}
-.ex_sub{
-    width: Fixed (1,344px)px;
-    height: Hug (212px)px;
-    top: 254px;
-    gap: 48px;
-    opacity: 0px;
-    
-}
-
-.ex_text {
-    width: Fill (1,260px)px;
-    height: Hug (116px)px;
-    max-width: 1260px;
-    gap: 16px;
-    opacity: 0px;
-    
-}
-
-.ex_text h1{
-    font-family: DotGothic16;
-    font-size: 64px;
-    font-weight: 400;
-    line-height: 68px;
-    letter-spacing: -0.02em;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-
-}
-
-.ex_text p{
-    font-family: Archivo;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-    letter-spacing: -0.005em;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-}
-
-.ex_button{
-    display: flex;
-    justify-content: center;
-}
-._buttonLarge {
-    background-color: #007bff;
-    color: #fff;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    margin-top: 20px;
-} */
-
 
 .divider {
     width: 100%;
     height: 1px;
     background-color: #ddd;
     margin-bottom: 20px;
+}
+
+.d{
+  height: 720px;
+  gap: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .div {
@@ -312,14 +246,13 @@ text-decoration-skip-ink: none;
 }
 
 .buttonLarge {
-    background-color: #007bff;
-    color: #fff;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    margin-top: 20px;
+  width: 155px;
+  height: 48px;
+  padding: 12px 24px 12px 24px;
+  gap: 0px;
+  opacity: 0px;
+  background: #2419F3;
+  color: white;  
 }
 .parchota{
     font-family: Archivo;
@@ -435,7 +368,7 @@ text-decoration-skip-ink: none;
     border-radius: 8px;
     opacity: 0px;
     background-color: #FFFFFF;
-    border-top: 2px solid #17340929;
+    border: 2px solid #17340929;
     font-family: Archivo;
     font-size: 20px;
     font-weight: 400;
@@ -445,7 +378,7 @@ text-decoration-skip-ink: none;
     text-decoration-skip-ink: none;
     color: #000000;    
 }
-button{
+.button{
     margin-top: 30px;
     width:400px;
     height: 36px;
@@ -482,3 +415,89 @@ button{
     color: #2419F3;
  
 }
+
+
+
+  
+  .stay-connected {
+    text-align: center;
+  }
+  
+  .stay-connected h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    font-family: Dotgothic16;
+  }
+  
+  .subscribe-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .email-input {
+    width: 300px;
+    max-width: 80%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .subscribe-button {
+    background-color: #0066ff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+    margin-left: 10px;
+  }
+  
+  .subscribe-button:hover {
+    background-color: #004bcc;
+  }
+  
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+  }
+  
+  .icon {
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+    display: inline-block;
+  }
+  
+  .facebook {
+    background-image: url('https://cdn3.iconfinder.com/data/icons/transparent-on-dark-grey/500/icon-02-512.png'); 
+  }
+  
+  .instagram {
+    background-image: url('https://cdn-icons-png.flaticon.com/512/1384/1384031.png'); 
+  }
+  
+  .twitter {
+    background-image: url('https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/x-social-media-black-icon.png'); /
+  }
+  
+  @media (max-width: 600px) {
+    .email-input {
+      width: 200px;
+    }
+  
+    .subscribe-button {
+      padding: 8px 16px;
+      font-size: 14px;
+    }
+  
+    .icon {
+      width: 30px;
+      height: 30px;
+    }
+  }
